Add diagnostic tools and adaptive threshold selection for evaluation

--- a/run_training_colab.ipynb
+++ b/run_training_colab.ipynb
@@ -40,9 +40,9 @@
     "    os.chdir('Mitre_Attack_TTP_Mapping')\n",
     "    print(f\"✅ Çalışma dizini: {os.getcwd()}\")\n",
     "    \n",
-    "    # Gerekli paketleri yükle\n",
+    "    # Gerekli paketleri yükle (sadece temel ML paketleri, Jupyter paketleri hariç)\n",
     "    print(\"\\n📦 Paketler yükleniyor...\")\n",
-    "    !pip install -q -r requirements.txt\n",
+    "    !pip install -q torch transformers datasets scikit-learn pandas tqdm wandb matplotlib seaborn\n",
     "    print(\"✅ Tüm paketler yüklendi\")\n",
     "else:\n",
     "    print(\"ℹ️  Yerel ortamda çalışıyorsunuz\")"
@@ -226,7 +226,25 @@
     "    json.dump(history, f, indent=2)\n",
     "\n",
     "print(f\"\\n✅ Eğitim tamamlandı!\")\n",
-    "print(f\"   Final loss: {history['train_loss'][-1]:.4f}\")"
+    "print(f\"   Final train loss: {history['train_loss'][-1]:.4f}\")\n",
+    "if 'val_loss' in history:\n",
+    "    print(f\"   Final val loss: {history['val_loss'][-1]:.4f}\")\n",
+    "\n",
+    "# Loss grafiği\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(history['train_loss'], label='Train Loss')\n",
+    "if 'val_loss' in history:\n",
+    "    plt.plot(history['val_loss'], label='Val Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.title('Training History')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.savefig(os.path.join(output_dir, 'training_loss.png'))\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"\\n📊 Loss grafiği kaydedildi: training_loss.png\")"
    ]
   },
   {
@@ -248,28 +266,68 @@
     "print(\"STEP 4: MODEL EVALUATION\")\n",
     "print(\"=\"*70 + \"\\n\")\n",
     "\n",
-    "metrics = evaluate_model(\n",
-    "    model=model,\n",
-    "    test_dataset=test_dataset,\n",
-    "    batch_size=CONFIG['batch_size'],\n",
-    "    device=CONFIG['device'],\n",
-    "    threshold=CONFIG['threshold'],\n",
-    "    label_list=label_list\n",
-    ")\n",
+    "# Önce model çıktılarını kontrol et\n",
+    "print(\"🔍 Model çıktılarını kontrol ediyorum...\")\n",
+    "model.eval()\n",
+    "sample_batch = next(iter(torch.utils.data.DataLoader(test_dataset, batch_size=16)))\n",
+    "with torch.no_grad():\n",
+    "    sample_out = model(\n",
+    "        input_ids=sample_batch['input_ids'].to(CONFIG['device']),\n",
+    "        attention_mask=sample_batch['attention_mask'].to(CONFIG['device'])\n",
+    "    )\n",
+    "    sample_probs = torch.sigmoid(sample_out['logits'])\n",
+    "    \n",
+    "print(f\"\\nSample sigmoid outputs:\")\n",
+    "print(f\"  Min: {sample_probs.min().item():.6f}\")\n",
+    "print(f\"  Max: {sample_probs.max().item():.6f}\")\n",
+    "print(f\"  Mean: {sample_probs.mean().item():.6f}\")\n",
+    "print(f\"  Median: {sample_probs.median().item():.6f}\")\n",
     "\n",
-    "# Metrikleri kaydet\n",
+    "# Otomatik threshold belirleme\n",
+    "optimal_threshold = float(sample_probs.median().item())\n",
+    "print(f\"\\n💡 Önerilen threshold: {optimal_threshold:.4f}\")\n",
+    "\n",
+    "# Farklı threshold değerleri ile değerlendir\n",
+    "thresholds_to_test = [0.1, 0.2, 0.3, optimal_threshold, 0.5]\n",
+    "print(f\"\\n📊 Farklı threshold değerleri test ediliyor...\")\n",
+    "\n",
+    "best_f1 = 0\n",
+    "best_threshold = 0.5\n",
+    "best_metrics = None\n",
+    "\n",
+    "for thresh in thresholds_to_test:\n",
+    "    metrics = evaluate_model(\n",
+    "        model=model,\n",
+    "        test_dataset=test_dataset,\n",
+    "        batch_size=CONFIG['batch_size'],\n",
+    "        device=CONFIG['device'],\n",
+    "        threshold=thresh,\n",
+    "        label_list=label_list\n",
+    "    )\n",
+    "    \n",
+    "    if metrics['micro_f1'] > best_f1:\n",
+    "        best_f1 = metrics['micro_f1']\n",
+    "        best_threshold = thresh\n",
+    "        best_metrics = metrics\n",
+    "\n",
+    "print(f\"\\n🏆 En iyi threshold: {best_threshold:.4f}\")\n",
+    "print(f\"   Micro F1: {best_f1:.4f}\")\n",
+    "\n",
+    "# En iyi metrikleri kaydet\n",
     "metrics_to_save = {k: float(v) if isinstance(v, (float, int)) else v \n",
-    "                   for k, v in metrics.items() \n",
+    "                   for k, v in best_metrics.items() \n",
     "                   if k not in ['predictions', 'labels']}\n",
+    "metrics_to_save['best_threshold'] = best_threshold\n",
+    "\n",
     "metrics_file = os.path.join(output_dir, \"evaluation_metrics.json\")\n",
     "with open(metrics_file, 'w') as f:\n",
     "    json.dump(metrics_to_save, f, indent=2)\n",
     "\n",
     "print(f\"\\n✅ Değerlendirme tamamlandı!\")\n",
-    "print(f\"\\nKey Metrics:\")\n",
-    "print(f\"  Micro F1:    {metrics['micro_f1']:.4f}\")\n",
-    "print(f\"  Macro F1:    {metrics['macro_f1']:.4f}\")\n",
-    "print(f\"  Samples F1:  {metrics['samples_f1']:.4f}\")"
+    "print(f\"\\nFinal Metrics (threshold={best_threshold:.4f}):\")\n",
+    "print(f\"  Micro F1:    {best_metrics['micro_f1']:.4f}\")\n",
+    "print(f\"  Macro F1:    {best_metrics['macro_f1']:.4f}\")\n",
+    "print(f\"  Samples F1:  {best_metrics['samples_f1']:.4f}\")"
    ]
   },
   {
