Add Top-K prediction strategy for better multi-label performance

--- a/run_training_colab.ipynb
+++ b/run_training_colab.ipynb
@@ -477,21 +477,144 @@
         "\n",
         "# Sonra yukarıdaki hücreleri tekrar çalıştır"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "3c09370d",
+      "metadata": {},
+      "source": [
+        "## 🔬 Advanced Evaluation - Top-K Strategy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "531c9ef2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 🔬 Advanced Evaluation with Top-K strategy\n",
+        "print(\"🔬 Testing Top-K prediction strategy...\\n\")\n",
+        "\n",
+        "# Calculate average number of true labels per sample\n",
+        "true_labels_sum = torch.stack([test_dataset[i]['labels'] for i in range(len(test_dataset))]).sum(dim=1)\n",
+        "avg_k = int(true_labels_sum.float().mean().item())\n",
+        "print(f\"Average true labels per sample: {avg_k:.1f}\")\n",
+        "\n",
+        "# Test different K values\n",
+        "k_values = [1, 3, 5, avg_k, 10, 15, 20]\n",
+        "topk_results = []\n",
+        "\n",
+        "for k in k_values:\n",
+        "    print(f\"\\nTesting Top-K with k={k}...\")\n",
+        "    \n",
+        "    model.eval()\n",
+        "    all_predictions = []\n",
+        "    all_labels = []\n",
+        "    \n",
+        "    test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=16, shuffle=False)\n",
+        "    \n",
+        "    with torch.no_grad():\n",
+        "        for batch in test_loader:\n",
+        "            outputs = model(\n",
+        "                input_ids=batch['input_ids'].to(CONFIG['device']),\n",
+        "                attention_mask=batch['attention_mask'].to(CONFIG['device'])\n",
+        "            )\n",
+        "            probs = torch.sigmoid(outputs['logits'])\n",
+        "            \n",
+        "            # Select top-k\n",
+        "            batch_preds = torch.zeros_like(probs)\n",
+        "            topk_values, topk_indices = torch.topk(probs, k=min(k, probs.size(1)), dim=1)\n",
+        "            batch_preds.scatter_(1, topk_indices, 1.0)\n",
+        "            \n",
+        "            all_predictions.append(batch_preds.cpu().numpy())\n",
+        "            all_labels.append(batch['labels'].cpu().numpy())\n",
+        "    \n",
+        "    predictions = np.vstack(all_predictions)\n",
+        "    labels = np.vstack(all_labels)\n",
+        "    \n",
+        "    # Compute metrics\n",
+        "    from sklearn.metrics import f1_score, precision_score, recall_score\n",
+        "    \n",
+        "    micro_f1 = f1_score(labels, predictions, average='micro', zero_division=0)\n",
+        "    macro_f1 = f1_score(labels, predictions, average='macro', zero_division=0)\n",
+        "    samples_f1 = f1_score(labels, predictions, average='samples', zero_division=0)\n",
+        "    precision = precision_score(labels, predictions, average='micro', zero_division=0)\n",
+        "    recall = recall_score(labels, predictions, average='micro', zero_division=0)\n",
+        "    \n",
+        "    topk_results.append({\n",
+        "        'k': k,\n",
+        "        'micro_f1': micro_f1,\n",
+        "        'macro_f1': macro_f1,\n",
+        "        'samples_f1': samples_f1,\n",
+        "        'precision': precision,\n",
+        "        'recall': recall\n",
+        "    })\n",
+        "    \n",
+        "    print(f\"  Micro F1: {micro_f1:.4f} | Precision: {precision:.4f} | Recall: {recall:.4f}\")\n",
+        "\n",
+        "# Display results table\n",
+        "print(f\"\\n{'='*80}\")\n",
+        "print(\"TOP-K STRATEGY RESULTS\")\n",
+        "print(f\"{'='*80}\\n\")\n",
+        "print(f\"{'K':>5} {'Micro F1':>10} {'Macro F1':>10} {'Samples F1':>12} {'Precision':>11} {'Recall':>10}\")\n",
+        "print(\"-\" * 80)\n",
+        "for result in topk_results:\n",
+        "    print(f\"{result['k']:>5} {result['micro_f1']:>10.4f} {result['macro_f1']:>10.4f} \"\n",
+        "          f\"{result['samples_f1']:>12.4f} {result['precision']:>11.4f} {result['recall']:>10.4f}\")\n",
+        "\n",
+        "# Find best K\n",
+        "best_result = max(topk_results, key=lambda x: x['micro_f1'])\n",
+        "print(f\"\\n🏆 Best K: {best_result['k']} with Micro F1: {best_result['micro_f1']:.4f}\")\n",
+        "\n",
+        "# Visualization\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+        "\n",
+        "# Plot F1 scores\n",
+        "k_vals = [r['k'] for r in topk_results]\n",
+        "axes[0].plot(k_vals, [r['micro_f1'] for r in topk_results], marker='o', label='Micro F1')\n",
+        "axes[0].plot(k_vals, [r['macro_f1'] for r in topk_results], marker='s', label='Macro F1')\n",
+        "axes[0].plot(k_vals, [r['samples_f1'] for r in topk_results], marker='^', label='Samples F1')\n",
+        "axes[0].axvline(x=best_result['k'], color='r', linestyle='--', alpha=0.5, label=f'Best K={best_result[\"k\"]}')\n",
+        "axes[0].set_xlabel('K')\n",
+        "axes[0].set_ylabel('F1 Score')\n",
+        "axes[0].set_title('F1 Scores vs K')\n",
+        "axes[0].legend()\n",
+        "axes[0].grid(True, alpha=0.3)\n",
+        "\n",
+        "# Plot Precision-Recall\n",
+        "axes[1].plot(k_vals, [r['precision'] for r in topk_results], marker='o', label='Precision')\n",
+        "axes[1].plot(k_vals, [r['recall'] for r in topk_results], marker='s', label='Recall')\n",
+        "axes[1].axvline(x=best_result['k'], color='r', linestyle='--', alpha=0.5, label=f'Best K={best_result[\"k\"]}')\n",
+        "axes[1].set_xlabel('K')\n",
+        "axes[1].set_ylabel('Score')\n",
+        "axes[1].set_title('Precision & Recall vs K')\n",
+        "axes[1].legend()\n",
+        "axes[1].grid(True, alpha=0.3)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(os.path.join(output_dir, 'topk_analysis.png'), dpi=150, bbox_inches='tight')\n",
+        "plt.show()\n",
+        "\n",
+        "print(f\"\\n📊 Top-K analiz grafiği kaydedildi: topk_analysis.png\")"
+      ]
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
-    "accelerator": "GPU"
+    "language_info": {
+      "name": "python"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
