--- a/run_training_colab.ipynb
+++ b/run_training_colab.ipynb
@@ -72,6 +72,7 @@
       "outputs": [],
       "source": [
         "import torch\n",
+        "import numpy as np\n",
         "import json\n",
         "from datetime import datetime\n",
         "\n",
