--- a/run_training_colab.ipynb
+++ b/run_training_colab.ipynb
@@ -601,6 +601,156 @@
         "\n",
         "print(f\"\\n📊 Top-K analiz grafiği kaydedildi: topk_analysis.png\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "dbd464d8",
+      "metadata": {},
+      "source": [
+        "## 🔍 Deep Debugging - Dataset & Model Inspection"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2eb373f1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"🔍 DEEP DEBUGGING SESSION\")\n",
+        "print(\"=\"*80)\n",
+        "\n",
+        "# 1. Dataset sanity check\n",
+        "print(\"\\n1️⃣ DATASET INSPECTION:\")\n",
+        "print(\"-\"*80)\n",
+        "\n",
+        "# Check a few samples\n",
+        "for i in range(3):\n",
+        "    sample = test_dataset[i]\n",
+        "    input_ids = sample['input_ids']\n",
+        "    labels = sample['labels']\n",
+        "    \n",
+        "    # Decode text\n",
+        "    from transformers import AutoTokenizer\n",
+        "    tokenizer = AutoTokenizer.from_pretrained(CONFIG['model_name'])\n",
+        "    text = tokenizer.decode(input_ids, skip_special_tokens=True)\n",
+        "    \n",
+        "    # Get label names\n",
+        "    label_indices = torch.where(labels == 1)[0].tolist()\n",
+        "    label_names = [label_list[idx] for idx in label_indices]\n",
+        "    \n",
+        "    print(f\"\\nSample {i+1}:\")\n",
+        "    print(f\"  Text (first 200 chars): {text[:200]}...\")\n",
+        "    print(f\"  True labels ({len(label_names)}): {label_names[:5]}{'...' if len(label_names) > 5 else ''}\")\n",
+        "\n",
+        "# 2. Model predictions inspection\n",
+        "print(\"\\n\\n2️⃣ MODEL PREDICTION INSPECTION:\")\n",
+        "print(\"-\"*80)\n",
+        "\n",
+        "model.eval()\n",
+        "with torch.no_grad():\n",
+        "    for i in range(3):\n",
+        "        sample = test_dataset[i]\n",
+        "        input_ids = sample['input_ids'].unsqueeze(0).to(CONFIG['device'])\n",
+        "        attention_mask = sample['attention_mask'].unsqueeze(0).to(CONFIG['device'])\n",
+        "        true_labels = sample['labels']\n",
+        "        \n",
+        "        outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        probs = torch.sigmoid(outputs['logits']).cpu().squeeze()\n",
+        "        \n",
+        "        # Top-5 predictions\n",
+        "        top5_probs, top5_indices = torch.topk(probs, k=5)\n",
+        "        top5_labels = [label_list[idx] for idx in top5_indices.tolist()]\n",
+        "        \n",
+        "        # True labels\n",
+        "        true_label_indices = torch.where(true_labels == 1)[0].tolist()\n",
+        "        true_label_names = [label_list[idx] for idx in true_label_indices]\n",
+        "        \n",
+        "        print(f\"\\nSample {i+1}:\")\n",
+        "        print(f\"  True labels: {true_label_names}\")\n",
+        "        print(f\"  Top-5 predictions:\")\n",
+        "        for prob, label in zip(top5_probs, top5_labels):\n",
+        "            match = \"✓\" if label in true_label_names else \"✗\"\n",
+        "            print(f\"    {match} {label}: {prob:.6f}\")\n",
+        "\n",
+        "# 3. Label distribution analysis\n",
+        "print(\"\\n\\n3️⃣ LABEL DISTRIBUTION:\")\n",
+        "print(\"-\"*80)\n",
+        "\n",
+        "# Collect all labels\n",
+        "all_train_labels = torch.stack([train_dataset[i]['labels'] for i in range(len(train_dataset))])\n",
+        "all_test_labels = torch.stack([test_dataset[i]['labels'] for i in range(len(test_dataset))])\n",
+        "\n",
+        "# Label frequency in training set\n",
+        "label_counts = all_train_labels.sum(dim=0)\n",
+        "sorted_counts, sorted_indices = torch.sort(label_counts, descending=True)\n",
+        "\n",
+        "print(f\"\\nTop 10 most frequent labels in training:\")\n",
+        "for i in range(10):\n",
+        "    idx = sorted_indices[i].item()\n",
+        "    count = sorted_counts[i].item()\n",
+        "    percentage = (count / len(train_dataset)) * 100\n",
+        "    print(f\"  {i+1}. {label_list[idx]}: {count} samples ({percentage:.2f}%)\")\n",
+        "\n",
+        "print(f\"\\nBottom 10 least frequent labels:\")\n",
+        "for i in range(10):\n",
+        "    idx = sorted_indices[-(i+1)].item()\n",
+        "    count = sorted_counts[-(i+1)].item()\n",
+        "    percentage = (count / len(train_dataset)) * 100\n",
+        "    print(f\"  {i+1}. {label_list[idx]}: {count} samples ({percentage:.2f}%)\")\n",
+        "\n",
+        "# Labels with zero samples\n",
+        "zero_labels = (label_counts == 0).sum().item()\n",
+        "print(f\"\\n⚠️  Labels with ZERO training samples: {zero_labels} out of {num_labels}\")\n",
+        "\n",
+        "# 4. Check if model learned anything\n",
+        "print(\"\\n\\n4️⃣ MODEL LEARNING VERIFICATION:\")\n",
+        "print(\"-\"*80)\n",
+        "\n",
+        "# Compare predictions before and after training (using saved initial state if available)\n",
+        "# Check if all predictions are similar (sign of no learning)\n",
+        "model.eval()\n",
+        "all_probs = []\n",
+        "with torch.no_grad():\n",
+        "    test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=64, shuffle=False)\n",
+        "    for batch in test_loader:\n",
+        "        outputs = model(\n",
+        "            input_ids=batch['input_ids'].to(CONFIG['device']),\n",
+        "            attention_mask=batch['attention_mask'].to(CONFIG['device'])\n",
+        "        )\n",
+        "        probs = torch.sigmoid(outputs['logits'])\n",
+        "        all_probs.append(probs.cpu())\n",
+        "\n",
+        "all_probs = torch.cat(all_probs, dim=0)\n",
+        "\n",
+        "print(f\"\\nPrediction statistics across all test samples:\")\n",
+        "print(f\"  Mean prob per label:\")\n",
+        "mean_probs_per_label = all_probs.mean(dim=0)\n",
+        "print(f\"    Min: {mean_probs_per_label.min():.6f}\")\n",
+        "print(f\"    Max: {mean_probs_per_label.max():.6f}\")\n",
+        "print(f\"    Mean: {mean_probs_per_label.mean():.6f}\")\n",
+        "print(f\"    Std: {mean_probs_per_label.std():.6f}\")\n",
+        "\n",
+        "# Check variance - low variance = model predicting same thing for everyone\n",
+        "variance_per_label = all_probs.var(dim=0)\n",
+        "low_variance_labels = (variance_per_label < 0.0001).sum().item()\n",
+        "print(f\"\\n⚠️  Labels with very low variance (<0.0001): {low_variance_labels} out of {num_labels}\")\n",
+        "print(f\"     (These labels get almost same prediction for all samples)\")\n",
+        "\n",
+        "# 5. Dataset class balance\n",
+        "print(\"\\n\\n5️⃣ CLASS BALANCE ANALYSIS:\")\n",
+        "print(\"-\"*80)\n",
+        "positive_ratio = all_train_labels.float().mean().item()\n",
+        "print(f\"Overall positive label ratio: {positive_ratio:.4f}\")\n",
+        "print(f\"This means: {positive_ratio*100:.2f}% of all possible labels are positive\")\n",
+        "print(f\"Class imbalance ratio: 1:{int(1/positive_ratio)}\")\n",
+        "\n",
+        "if positive_ratio < 0.01:\n",
+        "    print(\"\\n⚠️  SEVERE CLASS IMBALANCE! This is likely the main problem.\")\n",
+        "    print(\"    With such rare positive labels, model defaults to predicting negative.\")\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*80)"
+      ]
     }
   ],
   "metadata": {
