--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -91,6 +91,7 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
     "from src.data_loader import prepare_data\n",
     "from src.model import load_model\n",
@@ -159,14 +160,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torch.utils.data import DataLoader\n",
+    "\n",
     "print(\"📥 Veri yükleniyor...\")\n",
     "\n",
     "# Load and prepare data\n",
-    "train_dataloader, test_dataloader, num_labels, label_names = prepare_data(\n",
+    "data = prepare_data(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
-    "    batch_size=BASE_CONFIG['batch_size'],\n",
     "    max_length=BASE_CONFIG['max_length']\n",
     ")\n",
+    "\n",
+    "# Create DataLoaders\n",
+    "train_dataloader = DataLoader(\n",
+    "    data['train_dataset'],\n",
+    "    batch_size=BASE_CONFIG['batch_size'],\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "test_dataloader = DataLoader(\n",
+    "    data['test_dataset'],\n",
+    "    batch_size=BASE_CONFIG['batch_size'],\n",
+    "    shuffle=False\n",
+    ")\n",
+    "\n",
+    "num_labels = data['num_labels']\n",
+    "label_names = data['label_list']\n",
     "\n",
     "print(f\"✅ Veri yüklendi\")\n",
     "print(f\"   Train batches: {len(train_dataloader)}\")\n",
