Fix syntax errors in strategy cells - restore proper code structure

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -287,20 +287,20 @@
     "\n",
     "# Store results\n",
     "all_test_results[strategy_name] = {\n",
+    "    'config': strategy_config['name'],\n",
+    "    'description': strategy_config['description'],\n",
+    "    'results': test_results\n",
+    "}\n",
     "\n",
-    "    'config': strategy_config['name'],print(\"\\n\")\n",
-    "\n",
-    "    'description': strategy_config['description'],        print(f\"   {metric}: {value:.4f}\")\n",
-    "\n",
-    "    'results': test_results    if isinstance(value, (int, float)):\n",
-    "\n",
-    "}for metric, value in test_results.items():\n",
-    "\n",
+    "# Display results\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(f\"✅ STRATEGY 1 TAMAMLANDI: {strategy_name}\")\n",
+    "print(\"=\"*60)\n",
     "print(f\"\\n📈 Sonuçlar:\")\n",
-    "\n",
-    "# Display resultsprint(\"=\"*60)\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*60)print(f\"✅ STRATEGY 1 TAMAMLANDI: {strategy_name}\")"
+    "for metric, value in test_results.items():\n",
+    "    if isinstance(value, (int, float)):\n",
+    "        print(f\"   {metric}: {value:.4f}\")\n",
+    "print(\"\\n\")"
    ]
   },
   {
@@ -387,18 +387,18 @@
     "all_test_results[strategy_name] = {\n",
     "    'config': strategy_config['name'],\n",
     "    'description': strategy_config['description'],\n",
+    "    'results': test_results\n",
+    "}\n",
     "\n",
-    "    'results': test_resultsprint(\"\\n\")\n",
-    "\n",
-    "}        print(f\"   {metric}: {value:.4f}\")\n",
-    "\n",
+    "# Display results\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(f\"✅ STRATEGY 2 TAMAMLANDI: {strategy_name}\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"\\n📈 Sonuçlar:\")\n",
+    "for metric, value in test_results.items():\n",
     "    if isinstance(value, (int, float)):\n",
-    "\n",
-    "# Display resultsfor metric, value in test_results.items():\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*60)print(f\"\\n📈 Sonuçlar:\")\n",
-    "\n",
-    "print(f\"✅ STRATEGY 2 TAMAMLANDI: {strategy_name}\")print(\"=\"*60)"
+    "        print(f\"   {metric}: {value:.4f}\")\n",
+    "print(\"\\n\")"
    ]
   },
   {
@@ -483,21 +483,21 @@
     ")\n",
     "\n",
     "# Store results\n",
+    "all_test_results[strategy_name] = {\n",
+    "    'config': strategy_config['name'],\n",
+    "    'description': strategy_config['description'],\n",
+    "    'results': test_results\n",
+    "}\n",
     "\n",
-    "all_test_results[strategy_name] = {print(\"\\n\")\n",
-    "\n",
-    "    'config': strategy_config['name'],        print(f\"   {metric}: {value:.4f}\")\n",
-    "\n",
-    "    'description': strategy_config['description'],    if isinstance(value, (int, float)):\n",
-    "\n",
-    "    'results': test_resultsfor metric, value in test_results.items():\n",
-    "\n",
-    "}print(f\"\\n📈 Sonuçlar:\")\n",
-    "\n",
+    "# Display results\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(f\"✅ STRATEGY 3 TAMAMLANDI: {strategy_name}\")\n",
     "print(\"=\"*60)\n",
-    "\n",
-    "# Display resultsprint(f\"✅ STRATEGY 3 TAMAMLANDI: {strategy_name}\")\n",
-    "print(\"\\n\" + \"=\"*60)"
+    "print(f\"\\n📈 Sonuçlar:\")\n",
+    "for metric, value in test_results.items():\n",
+    "    if isinstance(value, (int, float)):\n",
+    "        print(f\"   {metric}: {value:.4f}\")\n",
+    "print(\"\\n\")"
    ]
   },
   {
@@ -582,21 +582,21 @@
     ")\n",
     "\n",
     "# Store results\n",
+    "all_test_results[strategy_name] = {\n",
+    "    'config': strategy_config['name'],\n",
+    "    'description': strategy_config['description'],\n",
+    "    'results': test_results\n",
+    "}\n",
     "\n",
-    "all_test_results[strategy_name] = {print(\"\\n\")\n",
-    "\n",
-    "    'config': strategy_config['name'],        print(f\"   {metric}: {value:.4f}\")\n",
-    "\n",
-    "    'description': strategy_config['description'],    if isinstance(value, (int, float)):\n",
-    "\n",
-    "    'results': test_resultsfor metric, value in test_results.items():\n",
-    "\n",
-    "}print(f\"\\n📈 Sonuçlar:\")\n",
-    "\n",
+    "# Display results\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(f\"✅ STRATEGY 4 TAMAMLANDI: {strategy_name}\")\n",
     "print(\"=\"*60)\n",
-    "\n",
-    "# Display resultsprint(f\"✅ STRATEGY 4 TAMAMLANDI: {strategy_name}\")\n",
-    "print(\"\\n\" + \"=\"*60)"
+    "print(f\"\\n📈 Sonuçlar:\")\n",
+    "for metric, value in test_results.items():\n",
+    "    if isinstance(value, (int, float)):\n",
+    "        print(f\"   {metric}: {value:.4f}\")\n",
+    "print(\"\\n\")"
    ]
   },
   {
@@ -682,22 +682,22 @@
     "    device=BASE_CONFIG['device']\n",
     ")\n",
     "\n",
-    "print(\"\\n\")\n",
+    "# Store results\n",
+    "all_test_results[strategy_name] = {\n",
+    "    'config': strategy_config['name'],\n",
+    "    'description': strategy_config['description'],\n",
+    "    'results': test_results\n",
+    "}\n",
     "\n",
-    "# Store results        print(f\"   {metric}: {value:.4f}\")\n",
-    "\n",
-    "all_test_results[strategy_name] = {    if isinstance(value, (int, float)):\n",
-    "\n",
-    "    'config': strategy_config['name'],for metric, value in test_results.items():\n",
-    "\n",
-    "    'description': strategy_config['description'],print(f\"\\n📈 Sonuçlar:\")\n",
-    "\n",
-    "    'results': test_resultsprint(\"=\"*60)\n",
-    "\n",
-    "}print(f\"✅ STRATEGY 5 TAMAMLANDI: {strategy_name}\")\n",
-    "\n",
+    "# Display results\n",
     "print(\"\\n\" + \"=\"*60)\n",
-    "# Display results"
+    "print(f\"✅ STRATEGY 5 TAMAMLANDI: {strategy_name}\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"\\n📈 Sonuçlar:\")\n",
+    "for metric, value in test_results.items():\n",
+    "    if isinstance(value, (int, float)):\n",
+    "        print(f\"   {metric}: {value:.4f}\")\n",
+    "print(\"\\n\")"
    ]
   },
   {
