Fix all load_model() calls - use correct parameters (use_focal_loss, focal_alpha, focal_gamma, device)

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -260,11 +260,12 @@
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
     "    num_labels=strategy_config['num_labels'],\n",
-    "    loss_type='focal' if strategy_config['use_focal_loss'] else 'bce',\n",
-    "    alpha=strategy_config.get('focal_alpha'),\n",
-    "    gamma=strategy_config.get('focal_gamma'),\n",
+    "    device=BASE_CONFIG['device'],\n",
+    "    use_focal_loss=strategy_config['use_focal_loss'],\n",
+    "    focal_alpha=strategy_config.get('focal_alpha', 0.25),\n",
+    "    focal_gamma=strategy_config.get('focal_gamma', 2.0),\n",
     "    pos_weight=strategy_config['pos_weight']\n",
-    ").to(BASE_CONFIG['device'])\n",
+    ")\n",
     "\n",
     "# Train model\n",
     "print(\"\\n🚀 Eğitim başlıyor...\")\n",
@@ -358,11 +359,12 @@
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
     "    num_labels=strategy_config['num_labels'],\n",
-    "    loss_type='focal' if strategy_config['use_focal_loss'] else 'bce',\n",
-    "    alpha=strategy_config.get('focal_alpha'),\n",
-    "    gamma=strategy_config.get('focal_gamma'),\n",
+    "    device=BASE_CONFIG['device'],\n",
+    "    use_focal_loss=strategy_config['use_focal_loss'],\n",
+    "    focal_alpha=strategy_config.get('focal_alpha', 0.25),\n",
+    "    focal_gamma=strategy_config.get('focal_gamma', 2.0),\n",
     "    pos_weight=strategy_config['pos_weight']\n",
-    ").to(BASE_CONFIG['device'])\n",
+    ")\n",
     "\n",
     "# Train model\n",
     "print(\"\\n🚀 Eğitim başlıyor...\")\n",
@@ -457,11 +459,12 @@
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
     "    num_labels=strategy_config['num_labels'],\n",
-    "    loss_type='focal' if strategy_config['use_focal_loss'] else 'bce',\n",
-    "    alpha=strategy_config.get('focal_alpha'),\n",
-    "    gamma=strategy_config.get('focal_gamma'),\n",
+    "    device=BASE_CONFIG['device'],\n",
+    "    use_focal_loss=strategy_config['use_focal_loss'],\n",
+    "    focal_alpha=strategy_config.get('focal_alpha', 0.25),\n",
+    "    focal_gamma=strategy_config.get('focal_gamma', 2.0),\n",
     "    pos_weight=strategy_config['pos_weight']\n",
-    ").to(BASE_CONFIG['device'])\n",
+    ")\n",
     "\n",
     "# Train model\n",
     "print(\"\\n🚀 Eğitim başlıyor...\")\n",
@@ -556,11 +559,12 @@
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
     "    num_labels=strategy_config['num_labels'],\n",
-    "    loss_type='focal' if strategy_config['use_focal_loss'] else 'bce',\n",
-    "    alpha=strategy_config.get('focal_alpha'),\n",
-    "    gamma=strategy_config.get('focal_gamma'),\n",
+    "    device=BASE_CONFIG['device'],\n",
+    "    use_focal_loss=strategy_config['use_focal_loss'],\n",
+    "    focal_alpha=strategy_config.get('focal_alpha', 0.25),\n",
+    "    focal_gamma=strategy_config.get('focal_gamma', 2.0),\n",
     "    pos_weight=strategy_config['pos_weight']\n",
-    ").to(BASE_CONFIG['device'])\n",
+    ")\n",
     "\n",
     "# Train model\n",
     "print(\"\\n🚀 Eğitim başlıyor...\")\n",
@@ -652,11 +656,12 @@
     "model = load_model(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
     "    num_labels=strategy_config['num_labels'],\n",
-    "    loss_type='focal' if strategy_config['use_focal_loss'] else 'bce',\n",
-    "    alpha=strategy_config.get('focal_alpha'),\n",
-    "    gamma=strategy_config.get('focal_gamma'),\n",
+    "    device=BASE_CONFIG['device'],\n",
+    "    use_focal_loss=strategy_config['use_focal_loss'],\n",
+    "    focal_alpha=strategy_config.get('focal_alpha', 0.25),\n",
+    "    focal_gamma=strategy_config.get('focal_gamma', 2.0),\n",
     "    pos_weight=strategy_config['pos_weight']\n",
-    ").to(BASE_CONFIG['device'])\n",
+    ")\n",
     "\n",
     "# Train model\n",
     "print(\"\\n🚀 Eğitim başlıyor...\")\n",
