--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -737,29 +737,30 @@
     "        results = data['results']\n",
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
-    "            'F1 (Top-5)': results.get('f1_score_top5', 0),\n",
-    "            'F1 (Top-10)': results.get('f1_score_top10', 0),\n",
-    "            'Precision': results.get('precision', 0),\n",
-    "            'Recall': results.get('recall', 0),\n",
-    "            'Hamming Loss': results.get('hamming_loss', 0)\n",
+    "            'Micro F1': results.get('micro_f1', 0),\n",
+    "            'Recall@5': results.get('recall_at_5', 0),\n",
+    "            'Precision@5': results.get('precision_at_5', 0),\n",
+    "            'Recall@10': results.get('recall_at_10', 0),\n",
+    "            'Precision@10': results.get('precision_at_10', 0),\n",
+    "            'Example Accuracy': results.get('example_based_accuracy', 0)\n",
     "        })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
-    "    df_comparison = df_comparison.sort_values('F1 (Top-5)', ascending=False)\n",
+    "    df_comparison = df_comparison.sort_values('Micro F1', ascending=False)\n",
     "    \n",
     "    print(df_comparison.to_string(index=False))\n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    \n",
     "    # Find best strategy\n",
     "    best_strategy = df_comparison.iloc[0]['Strategy']\n",
-    "    best_f1 = df_comparison.iloc[0]['F1 (Top-5)']\n",
+    "    best_f1 = df_comparison.iloc[0]['Micro F1']\n",
     "    \n",
     "    print(f\"\\n🏆 EN İYİ STRATEJİ: {best_strategy}\")\n",
-    "    print(f\"   F1 Score (Top-5): {best_f1:.4f}\")\n",
+    "    print(f\"   Micro F1 Score: {best_f1:.4f}\")\n",
     "    \n",
     "    # Compare to baseline if exists\n",
     "    if 'baseline' in all_test_results:\n",
-    "        baseline_f1 = all_test_results['baseline']['results'].get('f1_score_top5', 0)\n",
+    "        baseline_f1 = all_test_results['baseline']['results'].get('micro_f1', 0)\n",
     "        improvement = ((best_f1 - baseline_f1) / baseline_f1 * 100) if baseline_f1 > 0 else 0\n",
     "        print(f\"   Baseline'a göre iyileştirme: {improvement:+.2f}%\")\n",
     "    \n",
@@ -769,31 +770,31 @@
     "        \n",
     "        # F1 scores comparison\n",
     "        strategies = df_comparison['Strategy'].tolist()\n",
-    "        f1_top5 = df_comparison['F1 (Top-5)'].tolist()\n",
-    "        f1_top10 = df_comparison['F1 (Top-10)'].tolist()\n",
+    "        micro_f1 = df_comparison['Micro F1'].tolist()\n",
+    "        recall_at_5 = df_comparison['Recall@5'].tolist()\n",
     "        \n",
     "        x = np.arange(len(strategies))\n",
     "        width = 0.35\n",
     "        \n",
-    "        axes[0].bar(x - width/2, f1_top5, width, label='Top-5', alpha=0.8)\n",
-    "        axes[0].bar(x + width/2, f1_top10, width, label='Top-10', alpha=0.8)\n",
+    "        axes[0].bar(x - width/2, micro_f1, width, label='Micro F1', alpha=0.8)\n",
+    "        axes[0].bar(x + width/2, recall_at_5, width, label='Recall@5', alpha=0.8)\n",
     "        axes[0].set_xlabel('Strategy')\n",
-    "        axes[0].set_ylabel('F1 Score')\n",
-    "        axes[0].set_title('F1 Score Comparison')\n",
+    "        axes[0].set_ylabel('Score')\n",
+    "        axes[0].set_title('Micro F1 & Recall@5 Comparison')\n",
     "        axes[0].set_xticks(x)\n",
     "        axes[0].set_xticklabels(strategies, rotation=45, ha='right')\n",
     "        axes[0].legend()\n",
     "        axes[0].grid(axis='y', alpha=0.3)\n",
     "        \n",
     "        # Precision-Recall comparison\n",
-    "        precision = df_comparison['Precision'].tolist()\n",
-    "        recall = df_comparison['Recall'].tolist()\n",
+    "        precision_at_5 = df_comparison['Precision@5'].tolist()\n",
+    "        precision_at_10 = df_comparison['Precision@10'].tolist()\n",
     "        \n",
-    "        axes[1].bar(x - width/2, precision, width, label='Precision', alpha=0.8)\n",
-    "        axes[1].bar(x + width/2, recall, width, label='Recall', alpha=0.8)\n",
+    "        axes[1].bar(x - width/2, precision_at_5, width, label='Precision@5', alpha=0.8)\n",
+    "        axes[1].bar(x + width/2, precision_at_10, width, label='Precision@10', alpha=0.8)\n",
     "        axes[1].set_xlabel('Strategy')\n",
     "        axes[1].set_ylabel('Score')\n",
-    "        axes[1].set_title('Precision & Recall Comparison')\n",
+    "        axes[1].set_title('Precision@K Comparison')\n",
     "        axes[1].set_xticks(x)\n",
     "        axes[1].set_xticklabels(strategies, rotation=45, ha='right')\n",
     "        axes[1].legend()\n",
@@ -842,11 +843,12 @@
     "        results = data['results']\n",
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
-    "            'F1_Top5': results.get('f1_score_top5', 0),\n",
-    "            'F1_Top10': results.get('f1_score_top10', 0),\n",
-    "            'Precision': results.get('precision', 0),\n",
-    "            'Recall': results.get('recall', 0),\n",
-    "            'Hamming_Loss': results.get('hamming_loss', 0)\n",
+    "            'Micro_F1': results.get('micro_f1', 0),\n",
+    "            'Recall_at_5': results.get('recall_at_5', 0),\n",
+    "            'Precision_at_5': results.get('precision_at_5', 0),\n",
+    "            'Recall_at_10': results.get('recall_at_10', 0),\n",
+    "            'Precision_at_10': results.get('precision_at_10', 0),\n",
+    "            'Example_Based_Accuracy': results.get('example_based_accuracy', 0)\n",
     "        })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
